# OPRRD

./: .gitignore  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
configs/: oprrd_mvp.yaml
scripts/: check_data.py  preflight_gate.py  run_baselines.py  run_mvp.py
src/: __init__.py
src/align/: __init__.py  span_align.py
src/data/: __init__.py  load_tasks.py  sft_data.py
src/eval/: __init__.py  evaluate.py
src/losses/: __init__.py  cka_loss.py  coordinate_mse.py
src/models/: __init__.py  build.py
src/train/: __init__.py  loop.py
src/utils/: __init__.py  config.py
tests/: test_cka_loss.py  test_loop.py  test_scoring.py  test_span_align.py
